--- a/public/style/hospital_finder.css
+++ b/public/style/hospital_finder.css
@@ -1,15 +1,18 @@
 html,
 body,
 header{
-    height: 100%;
+    height: 100vh;
     width: 100%;
     margin: 0px;
     padding: 0px;
     overflow-x: hidden; 
 }
-
+html{
+    scroll-behavior: smooth;
+}
 
 #intro{
+    background-position: 50% 50%;
     height: 80%;
     background: url("../img/finder_bg.png") no-repeat center center fixed;
     -webkit-background-size: cover;
