--- a/public/style/signUp.css
+++ b/public/style/signUp.css
@@ -1,8 +1,7 @@
 html,
 body,
-header,
-#intro{
-    height: 100%;
+header{
+    height: 100vh;
     width: 100%;
     margin: 0px;
     padding: 0px;
@@ -13,6 +12,8 @@ html{
 }
 
 #intro{
+    height: 100%;
+    background-position: 50% 50%;
     background: url("../img/bg_register.png") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
